syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse); // query user list
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // query user by user.mobile
  rpc GetUserById(IdRequest) returns (UserInfoResponse); // query user by user.id
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // add user
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // update user
  rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse); // check user.password
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int32  id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}
